--- a/jogo.html
+++ b/jogo.html
@@ -43,7 +43,6 @@ header #siteTitle img {
   height: 30px;
 }
 
-/* ===== RIGHT CONTROLS ===== */
 header .right-controls {
   display: flex;
   align-items: center;
@@ -64,6 +63,40 @@ header button:hover {
   background: #45a049;
 }
 
+/* ===== PUBLICIDADE FIXA LATERAL ===== */
+.ads-sidebar {
+  width: 280px;
+  position: fixed;
+  top: 70px; /* abaixo do header */
+  left: 10px;
+  background: #fafafa;
+  border-radius: 10px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+  padding: 10px;
+  text-align: center;
+  box-sizing: border-box;
+  z-index: 900;
+}
+
+.ads-sidebar h3 {
+  font-size: 1em;
+  color: #555;
+  margin-bottom: 8px;
+}
+
+.ads-container {
+  width: 100%;
+  min-height: 250px;
+  background: #f5f5f5;
+  border: 1px dashed #ccc;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+  font-size: 0.9em;
+}
+
 /* ===== MAIN CONTENT ===== */
 main {
   flex: 1;
@@ -72,6 +105,7 @@ main {
   align-items: flex-start;
   padding: 15px;
   box-sizing: border-box;
+  margin-left: 310px; /* espaço para a barra lateral */
 }
 
 .content {
@@ -186,12 +220,6 @@ body.dark-mode .content {
   box-shadow: 0 4px 15px rgba(255,255,255,0.1);
 }
 
-body.dark-mode footer {
-  background: #1e1e1e;
-  color: #bbb;
-  box-shadow: 0 -2px 6px rgba(255,255,255,0.1);
-}
-
 body.dark-mode #timerBar {
   background: #00e0ff;
 }
@@ -202,6 +230,16 @@ body.dark-mode #controls button {
 
 body.dark-mode #controls button:hover {
   background: #00a08a;
+}
+
+/* ===== RESPONSIVO ===== */
+@media (max-width: 1024px) {
+  main {
+    margin-left: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+  .ads-sidebar { display: none; }
 }
 </style>
 </head>
@@ -218,6 +256,13 @@ body.dark-mode #controls button:hover {
   </div>
 </header>
 
+<!-- PUBLICIDADE FIXA LATERAL -->
+<aside class="ads-sidebar">
+  <h3>Publicidade</h3>
+  <div class="ads-container">
+    Área de anúncio lateral (300x600)
+  </div>
+</aside>
 
 <main>
   <div class="content">
@@ -259,40 +304,6 @@ themeToggle.addEventListener('click', () => {
   localStorage.setItem('theme', isDark ? 'dark' : 'light');
 });
 </script>
-
-
-<script>
-// ===== GARANTE QUE O EMOJI SEMPRE FIQUE VISÍVEL =====
-window.addEventListener("DOMContentLoaded", () => {
-  const title = document.getElementById("siteTitle");
-  if (!document.getElementById("emojiDimitry")) {
-    const img = document.createElement("img");
-    img.id = "emojiDimitry";
-    img.src = "emoji_dimitry.png";
-    img.alt = "Dimitry";
-    img.style.width = "30px";
-    img.style.height = "30px";
-    title.appendChild(img);
-  }
-});
-
-// ===== MODO ESCURO =====
-const themeToggle = document.getElementById('themeToggle');
-const currentTheme = localStorage.getItem('theme');
-
-if (currentTheme === 'dark') {
-  document.body.classList.add('dark-mode');
-  themeToggle.textContent = '☀️';
-}
-
-themeToggle.addEventListener('click', () => {
-  document.body.classList.toggle('dark-mode');
-  const isDark = document.body.classList.contains('dark-mode');
-  themeToggle.textContent = isDark ? '☀️' : '🌙';
-  localStorage.setItem('theme', isDark ? 'dark' : 'light');
-});
-</script>
-
 
 </body>
 </html>
