--- a/chat.html
+++ b/chat.html
@@ -12,62 +12,73 @@
 
 <style>
 :root {
-  --color-bg-light:#f5f5f5;
-  --color-primary:#4CAF50;
-  --color-primary-hover:#45a049;
-  --color-name:#1976d2;
+  --color-bg-light: #f5f5f5;
+  --color-primary: #4CAF50;
+  --color-primary-hover: #45a049;
 }
-/* ====== Seu CSS original permanece ===== */
-*{box-sizing:border-box;margin:0;padding:0;}
-html,body{height:100%;font-family:Arial,sans-serif;background:var(--color-bg-light);}
-header{background:#fff;padding:10px;border-bottom:1px solid #ddd;z-index:100;display:flex;align-items:center;gap:8px;justify-content:space-between;}
-header h1{display:flex;align-items:center;gap:8px;color:var(--color-primary);font-size:1.4em;}
-.emoji-head{width:32px;height:32px;}
-#topBar{display:flex;align-items:center;gap:8px;padding:6px 10px;background:#fafafa;border-bottom:1px solid #ddd;flex-wrap:wrap;overflow-x:auto;}
-#topBar button{background:white;color:var(--color-primary);border:1px solid var(--color-primary);padding:6px 10px;border-radius:5px;cursor:pointer;flex-shrink:0;}
-#mobileUserLine{display:none;overflow-x:auto;white-space:nowrap;background:#fafafa;padding:6px 4px;border-bottom:1px solid #ddd;}
-.userItemMobile{width:50px;height:50px;border-radius:50%;overflow:hidden;display:inline-block;margin-right:6px;border:2px solid transparent;cursor:pointer;transition:transform .2s;position:relative;}
-.userItemMobile img{width:100%;height:100%;border-radius:50%;object-fit:cover;}
-.userItemMobile:hover{border-color:var(--color-primary);transform:scale(1.1);}
-.alert-dot{position:absolute;top:0;right:0;width:12px;height:12px;background:red;border-radius:50%;animation:blink 1s infinite;}
-@keyframes blink{50%{opacity:0;}}
-#currentPartner{font-weight:bold;color:var(--color-name);}
-#mainContent{display:flex;flex:1;overflow:hidden;height:calc(100vh - 108px);}
-#userList{width:200px;background:#fff;border-right:1px solid #ddd;overflow-y:auto;padding:8px;}
-.userItem{display:flex;align-items:center;gap:6px;margin-bottom:6px;cursor:pointer;padding:6px;border-radius:5px;position:relative;}
-.userItem:hover{background:#e0f7e9;}
-.userItem img{width:28px;height:28px;border-radius:50%;}
-#chatContainer{flex:1;display:flex;flex-direction:column;overflow:hidden;position:relative;}
-#chatHeader{display:flex;justify-content:space-between;align-items:center;padding:6px 10px;border-bottom:1px solid #ddd;background:#fafafa;position:relative;gap:4px;}
-#chatWindow{flex:1;overflow-y:auto;padding:6px;background:white;}
-.msg{margin:4px 0;padding:6px;border-radius:8px;max-width:80%;word-wrap:break-word;}
-.userMsg{background:#e0f7e9;align-self:flex-end;text-align:right;}
-.otherMsg{background:#fff8dc;align-self:flex-start;text-align:left;}
-#chatInput{display:flex;border-top:1px solid #ddd;background:white;padding:4px;}
-#chatInput input{flex:1;padding:8px;font-size:1em;border:1px solid #ccc;border-radius:5px;}
-#chatInput button{background:var(--color-primary);color:white;border:none;padding:8px 12px;margin-left:4px;border-radius:5px;cursor:pointer;}
-#chatInput button:hover{background:var(--color-primary-hover);}
-#adSidebar{width:280px;background:#f1f1f1;border-left:1px dashed #ccc;padding:8px;text-align:center;overflow-y:auto;}
-footer{background:white;color:#555;text-align:center;padding:6px;font-size:.85em;border-top:1px solid #ddd;}
-/* ===== Botões desktop e mobile ===== */
-.desktopControls { display:flex; gap:6px; }
-.desktopControls button { padding:4px 8px; font-size:0.85em; border:none; border-radius:5px; cursor:pointer; color:#fff; }
-#hideChatBtnDesktop{background:red;}
-#blockBtnDesktop{background:var(--color-primary);}
-.mobileControlArea{ display:none; position:fixed; bottom:100px; left:0; right:0; background:white; padding:4px; display:flex; gap:4px; z-index:80; }
-.mobileControlArea button{ flex:1; padding:8px; font-size:1em; border:none; border-radius:5px; cursor:pointer; }
-#hideChatBtnMobile{background:red;color:white;}
-#blockBtnMobile{background:var(--color-primary);color:white;}
+
+/* RESET */
+* { box-sizing: border-box; margin:0; padding:0; }
+html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
+
+/* HEADER */
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; position:fixed; top:0; left:0; right:0; }
+header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
+.emoji-head { width:32px; height:32px; }
+
+/* TOPBAR */
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; margin-top:50px;}
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
+#topBar span { font-size:0.9em; flex-shrink:0; }
+
+/* MOBILE USERS HORIZONTAL */
+#mobileUserLine { display:flex; overflow-x:auto; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; margin-top:0px; }
+.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
+.userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
+.userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
+
+/* BOLINHA DE NOTIFICAÇÃO PISCANTE */
+.notify-dot { position:absolute; top:2px; right:2px; width:10px; height:10px; background:red; border-radius:50%; animation: blink 1s infinite; display:none; }
+@keyframes blink { 0% { opacity:1; } 50% { opacity:0; } 100% { opacity:1; } }
+
+/* MAIN */
+#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 150px); margin-top:10px; justify-content:center; }
+
+/* USER LIST (DESKTOP) */
+#userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
+.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
+.userItem:hover { background:#e0f7e9; }
+.userItem img { width:28px; height:28px; border-radius:50%; }
+
+/* CHAT */
+#chatContainer { flex:0 0 600px; display:flex; flex-direction:column; overflow:hidden; margin-left:0px; border:1px solid #ddd; border-radius:8px; background:white; }
+#chatHeader { display:flex; justify-content:flex-end; gap:6px; padding:6px; border-bottom:1px solid #ddd; background:#fafafa; }
+#chatHeader button { padding:6px 10px; border:none; border-radius:5px; cursor:pointer; color:white; background:var(--color-primary); }
+#chatHeader button:hover { background:var(--color-primary-hover); }
+
+#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
+.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
+.userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
+.otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
+
+/* CHAT INPUT */
+#chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
+#chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
+#chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
+#chatInput button:hover { background:var(--color-primary-hover); }
+
+/* ADS */
+#adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
+
+/* FOOTER */
+footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; position:fixed; bottom:0; left:0; right:0; z-index:100; }
+
+/* MOBILE */
 @media(max-width:768px){
-  header{position:fixed;top:0;left:0;right:0;z-index:100;height:50px;}
-  #topBar{position:fixed;top:50px;left:0;right:0;height:40px;z-index:100;}
-  #mobileUserLine{display:flex;position:fixed;top:90px;left:0;right:0;padding:6px 4px;background:#fafafa;border-bottom:1px solid #ddd;z-index:100;overflow-x:auto;}
-  #mainContent{flex-direction:column;margin-top:140px;margin-bottom:120px;height:auto;overflow-y:auto;}
-  #chatWindow{flex:1;overflow-y:auto;width:100%;padding-bottom:160px;}
-  #chatInput{position:fixed;bottom:50px;left:0;right:0;background:white;z-index:70;width:100%;}
-  .mobileControlArea{display:flex;bottom:100px;}
-  footer{position:fixed;bottom:0;left:0;right:0;height:40px;z-index:90;}
-  #userList,#adSidebar,.desktopControls{display:none;}
+  #mainContent { flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; }
+  #chatContainer { width:100%; }
+  #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
+  #userList, #adSidebar { display:none; }
 }
 </style>
 </head>
@@ -91,181 +102,79 @@ footer{background:white;color:#555;text-align:center;padding:6px;font-size:.85em
   <div id="userList"></div>
   <div id="chatContainer">
     <div id="chatHeader">
-      <div id="currentPartner">🌍 Global</div>
-      <div class="desktopControls">
-        <button id="hideChatBtnDesktop">Apagar chat</button>
-        <button id="blockBtnDesktop">Bloquear</button>
-      </div>
+      <button id="clearBtn">Apagar</button>
+      <button id="blockBtn">Bloquear</button>
     </div>
-
     <div id="chatWindow"></div>
-
-    <!-- Botões Mobile -->
-    <div class="mobileControlArea">
-      <button id="hideChatBtnMobile">Apagar chat</button>
-      <button id="blockBtnMobile">Bloquear</button>
-    </div>
-
     <div id="chatInput">
       <input type="text" id="msgInput" placeholder="Digite sua mensagem..." disabled>
       <button id="sendBtn" disabled>Enviar</button>
     </div>
   </div>
-  <div id="adSidebar">Publicidade aqui</div>
+  <div id="adSidebar">Publicidade aqui (Adsense)</div>
 </div>
 
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
+<audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
+
 <script>
-/* === CONFIG FIREBASE === */
-const firebaseConfig={apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
-authDomain:"dimitry-rusian.firebaseapp.com",
-databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
-projectId:"dimitry-rusian",storageBucket:"dimitry-rusian.appspot.com",
-messagingSenderId:"449029666805",appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
+const firebaseConfig = {
+  apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
+  authDomain: "dimitry-rusian.firebaseapp.com",
+  databaseURL: "https://dimitry-rusian-default-rtdb.firebaseio.com",
+  projectId: "dimitry-rusian",
+  storageBucket: "dimitry-rusian.appspot.com",
+  messagingSenderId: "449029666805",
+  appId: "1:449029666805:web:feaf575a7b7e6f234a52bc"
+};
 firebase.initializeApp(firebaseConfig);
-const auth=firebase.auth(),db=firebase.database();
 
-/* === ELEMENTOS === */
-const loginBtn=document.getElementById("loginBtn"),logoutBtn=document.getElementById("logoutBtn"),
-msgInput=document.getElementById("msgInput"),sendBtn=document.getElementById("sendBtn"),
-chatWindow=document.getElementById("chatWindow"),userList=document.getElementById("userList"),
-mobileUserLine=document.getElementById("mobileUserLine"),currentPartnerEl=document.getElementById("currentPartner"),
-hideChatBtnMobile=document.getElementById("hideChatBtnMobile"),blockBtnMobile=document.getElementById("blockBtnMobile"),
-hideChatBtnDesktop=document.getElementById("hideChatBtnDesktop"),blockBtnDesktop=document.getElementById("blockBtnDesktop"),
-onlineCount=document.getElementById("onlineCount");
+const auth=firebase.auth();
+const db=firebase.database();
+const loginBtn=document.getElementById("loginBtn");
+const logoutBtn=document.getElementById("logoutBtn");
+const msgInput=document.getElementById("msgInput");
+const sendBtn=document.getElementById("sendBtn");
+const chatWindow=document.getElementById("chatWindow");
+const clearBtn=document.getElementById("clearBtn");
+const blockBtn=document.getElementById("blockBtn");
+const onlineCount=document.getElementById("onlineCount");
+const msgSound=document.getElementById("msgSound");
 
-let userData={},currentChat="chatGlobal",currentPartnerUID=null,blocked={},hidden={};
+let blocked=false;
 
-/* === LOGIN === */
-loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
-logoutBtn.onclick=()=>auth.signOut();
+// Limpar mensagens
+clearBtn.onclick=()=>{ chatWindow.innerHTML=""; alert("Mensagens apagadas"); };
 
-auth.onAuthStateChanged(u=>{
- if(u){
-  userData={uid:u.uid,name:u.displayName,photo:u.photoURL};
-  loginBtn.style.display="none";logoutBtn.style.display="inline-block";
-  msgInput.disabled=false;sendBtn.disabled=false;
+// Bloquear chat
+blockBtn.onclick=()=>{
+  blocked=!blocked;
+  msgInput.disabled=blocked;
+  sendBtn.disabled=blocked;
+  blockBtn.textContent=blocked?"Desbloquear":"Bloquear";
+};
 
-  // Online e permanente
-  db.ref("online/"+u.uid).set({name:u.displayName,photo:u.photoURL});
-  db.ref("online/"+u.uid).onDisconnect().remove();
-  db.ref("usuariosConectados/"+u.uid).set({name:u.displayName,photo:u.photoURL});
-
-  loadBlocked();
-  updateUsers();
-  startGlobal();
- }else{
-  userData={};msgInput.disabled=true;sendBtn.disabled=true;
-  loginBtn.style.display="inline-block";logoutBtn.style.display="none";
-  startGlobal();
- }
-});
-
-/* === BLOQUEIO CORRIGIDO (invertido) === */
-async function loadBlocked(){
- if(!userData.uid) return;
- const snap = await db.ref("blocked").once("value");
- blocked = snap.val() || {};
+// Enviar mensagem
+sendBtn.onclick=sendMessage;
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter") sendMessage();});
+function sendMessage(){
+  if(blocked) return;
+  const text=msgInput.value.trim();
+  if(!text) return;
+  const user=auth.currentUser || {displayName:"Visitante"};
+  const div=document.createElement("div");
+  div.className="msg "+(user.displayName==="Visitante"?"otherMsg":"userMsg");
+  div.textContent=`${user.displayName}: ${text}`;
+  chatWindow.appendChild(div);
+  chatWindow.scrollTop=chatWindow.scrollHeight;
+  msgInput.value="";
+  msgSound.currentTime=0; msgSound.play();
 }
 
-function toggleBlock(){
- if(!currentPartnerUID||!userData.uid) return;
- const ref = db.ref(`blocked/${currentPartnerUID}/${userData.uid}`);
- const btns=[blockBtnMobile,blockBtnDesktop];
- if(blocked[currentPartnerUID] && blocked[currentPartnerUID][userData.uid]){
-   ref.remove();
-   blocked[currentPartnerUID][userData.uid]=false;
-   btns.forEach(b=>b.textContent="Bloquear");
- } else{
-   ref.set(true);
-   if(!blocked[currentPartnerUID]) blocked[currentPartnerUID]={};
-   blocked[currentPartnerUID][userData.uid]=true;
-   btns.forEach(b=>b.textContent="Desbloquear");
- }
-}
-blockBtnMobile.onclick=toggleBlock;
-blockBtnDesktop.onclick=toggleBlock;
-
-/* === LISTA DE USUÁRIOS ONLINE + PERMANENTES === */
-function updateUsers(){
- db.ref("usuariosConectados").on("value",snap=>{
-   const allUsers = snap.val()||{};
-   db.ref("online").once("value").then(onlineSnap=>{
-     const onlineUsers = onlineSnap.val()||{};
-     userList.innerHTML=""; mobileUserLine.innerHTML="";
-     let count=0;
-     for(const [uid,u] of Object.entries(allUsers)){
-       if(uid===userData.uid) continue;
-       const isOnline = !!onlineUsers[uid];
-       if(isOnline) count++;
-       const d=document.createElement("div");
-       d.className="userItem";
-       d.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}${isOnline?' 🟢':''}</span>`;
-       d.onclick=()=>startPrivate(uid,u.name);
-       userList.appendChild(d);
-       const m=document.createElement("div");
-       m.className="userItemMobile";
-       m.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}${isOnline?' (Online)':''}">`;
-       m.onclick=()=>startPrivate(uid,u.name);
-       mobileUserLine.appendChild(m);
-     }
-     onlineCount.textContent="👥 Usuários online: "+count;
-   });
- });
-}
-
-/* === CHAT GLOBAL === */
-function startGlobal(){
- currentChat="chatGlobal"; currentPartnerUID=null;
- currentPartnerEl.textContent="🌍 Global"; chatWindow.innerHTML="";
- db.ref("chatGlobal").off();
- db.ref("chatGlobal").on("child_added",snap=>showMsg(snap.val(),"chatGlobal"));
-}
-
-/* === CHAT PRIVADO === */
-function startPrivate(uid,name){
- currentPartnerUID=uid; currentChat=[userData.uid,uid].sort().join("_");
- currentPartnerEl.textContent=name; chatWindow.innerHTML="";
- const btns=[blockBtnMobile,blockBtnDesktop];
- btns.forEach(b=>b.textContent=(blocked[uid] && blocked[uid][userData.uid])?"Desbloquear":"Bloquear");
- db.ref("private/"+currentChat).off();
- db.ref("private/"+currentChat).on("child_added",snap=>showMsg(snap.val(),currentChat));
-}
-
-/* === ENVIAR MENSAGEM === */
-sendBtn.onclick=()=>sendMsg();
-msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMsg();});
-function sendMsg(){
- const text=msgInput.value.trim(); if(!text) return;
- if(currentPartnerUID && blocked[currentPartnerUID] && blocked[currentPartnerUID][userData.uid]){
-   alert("Este usuário bloqueou você e você não pode enviar mensagens.");
-   return;
- }
- const path=currentChat==="chatGlobal"?"chatGlobal":"private/"+currentChat;
- db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
- msgInput.value="";
-}
-
-/* === MOSTRAR MENSAGEM === */
-function showMsg(m,room){
- if(room!=="chatGlobal" && room!==currentChat) return;
- if(hidden[currentChat]) return;
- const d=document.createElement("div");
- d.className=m.uid===userData.uid?"msg userMsg":"msg otherMsg";
- d.textContent=m.text;
- chatWindow.appendChild(d);
- chatWindow.scrollTop=chatWindow.scrollHeight;
-}
-
-/* === APAGAR CHAT LOCAL === */
-function hideChat(){
- hidden[currentChat]=true;
- chatWindow.innerHTML="";
- localStorage.setItem(`hidden_${userData.uid}_${currentChat}`,"1");
-}
-hideChatBtnMobile.onclick=hideChat;
-hideChatBtnDesktop.onclick=hideChat;
+// Centralizar o chat no desktop
+window.addEventListener("resize",()=>{ document.getElementById("mainContent").style.justifyContent=window.innerWidth>768?"center":"flex-start"; });
 </script>
+
 </body>
 </html>
